--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "module": "nodenext",
+    "module": "esnext",
+    "moduleResolution": "node10",
     "types": [],
 
     // Style Options
